@@ -1,3 +1,10 @@
+2014-04-07  Araki Ken  <arakiken@users.sf.net>
+
+	* MLActivity.java, x_display.c: The failure of animating gif images downloaded
+	  from remote hosts on Android is fixed.
+
+	* c_animgif.c: The processing of dispose method is fixed.
+
 2014-04-06  Araki Ken  <arakiken@users.sf.net>
 
 	* x_picture.c, c_animgif.c: ~/.mlterm/anim%d.gif => ~/.mlterm/anim.gif
